tests/quick_start_delete_dependency/quick_start_delete_dependency.exp

Stop any already-running server.

Quick start.

Expect no errors.
No errors!

The Flow server is currently in lazy mode and is only checking 8/10 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Delete @flow file with a @flow dependent file, expect error.
Error --------------------------------------------------------------------------------------------------------- b.js:2:9

Cannot resolve module `./a`. [cannot-resolve-module]

   2| require('./a');
              ^^^^^



Found 1 error

The Flow server is currently in lazy mode and is only checking 9/9 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Revert file, expect no errors.
No errors!

The Flow server is currently in lazy mode and is only checking 10/10 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes

Done!
